# mailorca

./: .gitignore  Makefile  README.md  SPECIFICATION.md  config.json  config.py  mailorca.py  pyproject.toml  requirements.txt  runserver.py
src/mailorca/: cli.py  config.py  smtp.py  store.py  web.py
src/mailorca/templates/: base.html  detail.html  list.html
tests/: conftest.py  test_store.py  test_web.py
