[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mailorca"
version = "0.3.0"
description = "A lightweight SMTP server and Web UI for development."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Your Name", email = "your.email@example.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "aiosmtpd",
    "jinja2",
    "python-multipart",
    "click"
]

[project.urls]
"Homepage" = "https://github.com/yourusername/mailorca"

[tool.setuptools.packages.find]
where = ["src"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 79
target-version = ['py39']
color = false
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.venv-mailorca
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
mypy_path = "src"
ignore_missing_imports = true
check_untyped_defs = true
color_output = false
