[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mailorca"
version = "0.3.0"
description = "A lightweight SMTP server and Web UI for development."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  {name = "YYNET"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "aiosmtpd",
    "jinja2",
    "python-multipart",
    "click"
]

[project.urls]
"Homepage" = "https://github.com/yynet2022/mailorca"

[project.optional-dependencies]
dev = [
    "flake8",
    "black",
    "isort",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[project.scripts]
mailorca = "mailorca.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mailorca = ["templates/*.html"]

[tool.isort]
profile = "black"
skip_glob = [".venv*"]

[tool.black]
line-length = 79
target-version = ['py39']
color = false

[tool.mypy]
python_version = "3.9"
mypy_path = "src"
ignore_missing_imports = true
check_untyped_defs = true
color_output = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
